--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">8 Years</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+2347057016547</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">divineshedrack1@gmail.com</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">123 Street, New York, USA</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">10 Downing St, 221B Baker , USA</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available Remotely</span></h6></div>
                     </div>
                     <a href="#contact" class="btn btn-outline-primary mr-4">Hire Me</a>
